At/#4387 signer modal fix (#4415)
* fix "sign on wallet" modal not showing up

* start refactoring modal component

* refactor all modals except ledger

* update wallet icons

* add a modal for default wallet type

* add modals for wc wallet

* extract some common code in components
add translations

* refactor common code in components
fix the race issue in accessWalletAndRunEffect saga
fix test accordingly

* fix e2e tests

* fix modal content centering
add a storybook test for multiline warning alert

--- a/packages/web/app/components/shared/WarningAlert.module.scss
+++ b/packages/web/app/components/shared/WarningAlert.module.scss
@@ -8,7 +8,7 @@
 
   .icon {
     @include rect(20px);
-
+    align-self: baseline;
     margin-right: .6em;
   }
 
